# chc-python-meetup-mcp-a2a-talk

./: .gitignore  Dockerfile  README.md  a2a-notes.md  a2a-with-mcp-notes.md  agent_chess.md  agent_chess_02.md  agent_chess_03.md  design.md  docker-compose.yml  gradio_chess_25.py  implementation.md  mcp-server-notes.md  mcp-standalone.md  requirements.md
adk_chess/: .env.template  .gitignore  Dockerfile  chess_game_manager.py  pyproject.toml  simple_chess_ui.py
adk_chess/black_player_agent/: Dockerfile  __init__.py  agent.py
adk_chess/orchestrator_agent/: __init__.py  agent.py
adk_chess/white_player_agent/: Dockerfile  __init__.py  agent.py
chess-mcp-server/: Dockerfile  README.md  chess_mcp_server.py  fastmcp-client-notes.md  pyproject.toml  pytest.ini  test_client.py  test_fastmcp_client.py  test_http_client.py
chess-mcp-server/prs/: EARS.md
chess-mcp-server/test_scripts/: __init__.py  test_fastmcp_client.py  test_mcp_server_health.py
chess-mcp-server/tests/: __init__.py
chess-mcp-server/tests/e2e/: __init__.py  test_complete_game_flow.py
chess-mcp-server/tests/integration/: __init__.py  test_mcp_tools.py
chess-mcp-server/tests/unit/: __init__.py  test_chess_logic.py
chess-player-agent/: Dockerfile  README.md  chess_player_agent.py  pyproject.toml  pytest.ini  simple_a2a_test.py
chess-player-agent/prs/: EARS.md
chess-player-agent/test_scripts/: __init__.py  test_mcp_connectivity.py  test_stateless_agent.py
chess-player-agent/tests/: __init__.py
chess-player-agent/tests/integration/: __init__.py  test_agent_mcp_integration.py
(+22 files in other folders)
